finished the css file

--- a/style.css
+++ b/style.css
@@ -90,3 +90,20 @@ h3{
 .remaining small {
   font-size: 12px;
 }
+
+
+.percentage {
+  background-color: var(--fill-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  height: 0;
+  font-size: 30px;
+  transition: 0.3s ease;
+}
+
+.text {
+  text-align: center;
+  margin: 0 0 5px;
+}
